--- a/CSS/style.css
+++ b/CSS/style.css
@@ -34,7 +34,7 @@ body{
 .header__img{
     width: 100%;
     height: 90%;
-    background-image: url("/images/large_negro2.png");
+    background-image: url("../images/large_negro2.png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
@@ -74,9 +74,9 @@ body{
 /* Seccion 1 Textos e imágen */
 
 .section_one{
-    height: 400px;
+    height: 415px;
     padding: 22px;
-    background-image: url("/images/principal.jpg");
+    background-image: url("../images/principal.jpg");
     background-size: cover;
 }
 
@@ -137,8 +137,204 @@ body{
 
 /* Final de la seccion uno */
 
+/* Seccion 2 cards */
+
+.section_two{
+    width: 100%;
+    padding: 50px 20px;
+    font-weight: ;
+    margin: auto;
+}
+
+.info-section{
+    margin: auto auto 70px auto;
+    text-align: center;
+}
+
+.title-section-two, .title-sub{
+    font-size: 35px;
+    font-weight: 700;
+}
+
+.title-sub{
+    display: inline;
+    border-bottom: 4px #ffff00 solid;
+    padding-bottom: 0%;
+}
+
+.subtitle-section{
+    margin-top: 30px;
+    font-size: 20px;
+    font-weight: 600;
+    color: #404040;
+}
+
+.description-section{
+    margin-top: 20px;
+    font-size: 14.5px;
+    font-weight: 400;
+    color: #6F6F6F;
+}
+
+.cards-container{
+    display: grid;
+    grid-template-columns: repeat(1, 275px);
+    grid-gap: 3em;
+    justify-content: center;
+}
+
+.card-item{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-end;
+    width: 275px;
+    height: 400px;
+    border-radius: 15px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    text-decoration: none;
+    text-align: left;
+    padding: 20px 20px 5px 15px;
+}
+
+.card-title, .card-description{
+    color: #ffffff;
+}
+
+.card-title{
+    font-weight: 700;
+}
+
+.card-description{
+    font-size: 12.5px;
+    font-weight: 600;
+    text-align: justify;
+}
+
+/* background CARDS */
+
+#card-1{
+    background-image: url("../images/alimentos.jpg");
+}
+
+#card-2{
+    background-image: url("../images/e-commerce.jpg");
+}
+
+#card-3{
+    background-image: url("../images/lifestyle.jpg");
+}
+
+#card-4{
+    background-image: url("../images/retratos.jpg");
+}
+
+#card-5{
+    background-image: url("../images/indumentaria.jpg");
+}
+
+#card-6{
+    background-image: url("../images/Eventos.jpg");
+}
+
+#card-7{
+    background-image: url("../images/accesorios.jpg");
+}
+
+#card-8{
+    background-image: url("../images/mobiliario.jpg");
+}
+
+#card-9{
+    background-image: url("../images/areas.jpg");
+}
+
+#card-10{
+    background-image: url("../images/productos.jpg");
+}
+
+#card-11{
+    background-image: url("../images/espacios.jpg");
+}
+
+/* Fin seccion two */
 
 
+/* Seccion three */
+
+.section_three{
+    padding: 90px 20px 30px 20px;
+}
+
+.title-section-three{
+    font-size: 35px;
+    font-weight: 700;
+}
+
+.description-section-three{
+    font-size: 17px;
+    color: #6F6F6F;
+    margin-top: 20px;
+}
+
+.block-container{
+    text-align: center;
+}
+
+.block-item{
+    margin: 5px auto;
+    width: 225px;
+    height: 225px;
+    border-radius: 20px;
+    padding: 60px 15px 10px 15px;
+    background-color: #2C2738;
+    color: #ffffff;
+    text-align: left;
+}
+
+.block-title{
+    font-size: 35px;
+    width: 75%;
+    font-weight: 800;
+}
+
+.block-description{
+    font-size: 13.5px;
+    font-weight: 500;
+}
+
+.block-plus{
+    font-size: 80px;
+    font-weight: 600;
+    color: #2C2738;
+}
+
+/* Fin seccion three */
+
+
+/* Seccion Four */
+
+.section_four{
+    padding: 90px 20px 30px 20px;
+}
+
+.title-section-four{
+    font-size: 35px;
+    font-weight: 700;
+}
+
+.description-section-four{
+    margin-top: 35px;
+    font-size: 17px;
+    color: #404040;
+}
+
+/* Carousel */
+
+
+
+/* fin carousel */
 
 
 
@@ -208,14 +404,15 @@ body{
     }
 
     .description-section{
-        height: 11%;
+        height: 15%;
         width: 90%;
         margin-top: 10px;
     }
     
     .description-p{
         text-align: left !important;
-        font-size: 18px;
+        font-size: 17px;
+        text-align: justify !important;
         font-weight: 300;
     }
 
@@ -246,7 +443,7 @@ body{
     .img-background{
         width: 100%;
         height: 100%;
-        background-image: url("/imagenes/img.png");
+        background-image: url("../images/principal.jpg");
         background-position: top;
         background-repeat: no-repeat;
         background-size: cover;
